# amvm

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile  todo.norg
.cargo/: config.toml
examples/: function.aml3  hello_world.aml3  hello_world.ron  iterator.aml3  iterator.js  iterator.meta.fail.aml3  lang.aml3  loops.aml3  obj.js  objects.aml3  palindrome.aml3  scope.aml3  scope.fail.aml3  stdin.aml3  test.aml3  variables.aml3  variables.ron
src/: aml3.rs  error.rs  lib.rs  macros.rs  main.rs  parser.rs  runtime.rs  utils.rs
src/aml3/: command.rs  error.rs  expr.rs  grammar.pest  meta.rs  parser.rs  scope.rs  struct.rs  type.rs  value.rs  variable.rs
src/parser/: mod.rs
src/runtime/: commands.rs  error.rs  result.rs  scope.rs  variable.rs
src/runtime/commands/: assign_var.rs  builtin.rs  call.rs  conditional.rs  for.rs  function.rs  loop.rs  loop_.rs  puts.rs  struct.rs
src/runtime/core/: iterator.rs  mod.rs
src/runtime/expr/: addition.rs  binary_op.rs  cond.rs  mod.rs  property.rs  range.rs  struct.rs  value.rs  var.rs
src/tokens/: command.rs  expr.rs  header.rs  mod.rs  program.rs  scope.rs  type.rs  value.rs
