[workspace]
members = [
  "extra/amvm-js"
]

[workspace.dependencies]
amvm = { path = "./" }
lazy_static = "1.4.0"
nom = "7.1.3"
pest = "2.7.10"
pest_derive = "2.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[package]
name = "amvm"
version = "0.1.0"
edition = "2021"
description = "Apika's My Virtual Machine. A virtual machine with Intermediate Lenguage"
license = "MIT"
default-run = "amvm"

[dependencies]
nom = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
